--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "interactjs": "^1.3.4",
+    "jquery": "^3.3.1",
     "less": "^3.8.1",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.2",
